--- a/predictionpopup.xaml
+++ b/predictionpopup.xaml
@@ -5,8 +5,8 @@
         AllowsTransparency="True"
         Background="Transparent"
         SizeToContent="Manual"
-        Width="300"        
-        Height="150" 
+        Width="300"
+        Height="150"
         Topmost="True"
         MouseLeftButtonDown="Window_MouseLeftButtonDown">
     <Border Background="White"
@@ -23,10 +23,10 @@
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
 
-            <!-- título centrado -->
-            <TextBlock Grid.Row="0"
+            <!-- título dinámico -->
+            <TextBlock x:Name="TitleText"
+                       Grid.Row="0"
                        Grid.ColumnSpan="2"
-                       Text="Predicción (SVM)"
                        FontSize="16"
                        FontWeight="Bold"
                        HorizontalAlignment="Center"
@@ -56,7 +56,7 @@
                            Margin="10,0,0,0"/>
             </StackPanel>
 
-            <!-- confidence -->
+            <!-- confianza -->
             <TextBlock x:Name="ConfidenceText"
                        Grid.Row="2"
                        Grid.ColumnSpan="2"
